--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,10 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.0.1")
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.8.0-M1'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+    implementation group: 'com.github.rokishopen', name: 'random-people', version: '0.0.1'
+    implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
+
 }
 
 test {
@@ -35,4 +39,5 @@ test {
     useJUnitPlatform { includeTags("Div") }
     failFast = true
 }
+
 
