--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,12 @@ repositories {
     mavenCentral()
 }
 
+compileJava.options.encoding = 'UTF-8'
+
+tasks.withType(JavaCompiler) {
+    options.encoding = 'UTF-8'
+}
+
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.0.1")
@@ -17,6 +23,9 @@ dependencies {
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
     implementation group: 'com.github.rokishopen', name: 'random-people', version: '0.0.1'
     implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
+    implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
+    implementation group: 'com.squareup.moshi', name: 'moshi', version: '1.12.0'
+    implementation group: 'org.simpleframework', name: 'simple-xml', version: '2.7.1'
 
 }
 
